fixes and enhancements for fullscreen image - thumbGallery is now overlay over image canvas - image is fit between header, thumbGallery, sidebar and footer - navigator is working again - navigator is fit within image home bounds so other elements don't overlap it

--- a/goobi-viewer-core/src/main/resources/META-INF/resources/resources/css/less/views/viewObjectFullscreen.less
+++ b/goobi-viewer-core/src/main/resources/META-INF/resources/resources/css/less/views/viewObjectFullscreen.less
@@ -275,10 +275,16 @@
                 margin: 0 auto;
             }
         }
+		&__image {			
+			&.-thumbnailPreviewGallery {
+				display: block;
+			}
+		}
     }
 
     &__view-image {
         flex-grow: 1;
+
         .view-object__object-3d-world-before-load-text {
             background: rgb(255, 255, 255);
             border: 1px solid #ccc;
